# rlt_ur5e

./: .gitignore  COMMANDS.md  EXECUTION_PLAN.md  PIPELINE_GUIDE.md  README.md  RLT_NEXT_STEPS.md  RLT_UR5e_SETUP_README.md  update_on_readme.md
classifier_ckpt/checkpoint_150/: _CHECKPOINT_METADATA  _METADATA  manifest.ocdbt
classifier_ckpt/checkpoint_150/array_metadatas/: process_0
docs/: CHECKPOINTS_README.md  DEPLOYMENT_GUIDE.md  HYPERPARAMETER_GUIDE.md  INDEX.md  MODEL_ARCHITECTURES.md  NEW_TASK_GUIDE.md  TRAINING_DETAILS.md  TRANSFER_GUIDE.md  architecture_reference.md  cluster.md  commands.md  hil_serl.md  lerobot_ur5e.md  openpi_ur5e.md  rlt_comparison_study.md  rlt_ur5e.md  system_comparison.md
hpc/: 01_setup.sh  02_transfer_dataset.sh  03_train.sh  04_resume.sh  04_status.sh  05_download_checkpoints.sh  05_train_v2.sh  06_interactive.sh  07_rl_token.sh  ADDING_NEW_DATASET.md  HPC_CLUSTER_INFO.md  HPC_INSTALL_GUIDE.md  HPC_SETUP_README.md  README.md  cache_fast_tokenizer.sh  fix_all_deps.sh  fix_and_run.sh  fix_checkpoints_for_inference.sh  fix_ptxas.sh  fix_python_rpath.sh  fix_resolution.sh  hpc_gpu.md  install_env.sh  setup_hpc_env.sh
hpc/slurm/: compute_norm_stats_v2.sh  extract_embeddings.sh  norm_stats.sh  pi0.sh  pi05.sh  pi05_50demos.sh  pi05_50demos_resume.sh  pi05_v2_50demos.sh  pi05_v2_full.sh  pi0_50demos.sh  pi0_50demos_resume.sh  pi0_fast.sh  pi0_fast_50demos.sh  pi0_fast_50demos_resume.sh  pi0_fast_v2_50demos.sh  pi0_fast_v2_full.sh  pi0_resume_final.sh  pi0_v2_50demos.sh  pi0_v2_full.sh  train_rl_token.sh
local_training/: README.md  train_local_pi0fast.sh  train_local_test.sh
openpi_ur5e/: .gitignore  HPC_TRAINING.md  PEG_INSERTION_TASK.md  README.md  UR5e_OpenPI_PIPELINE_README.md
openpi_ur5e/lerobot_ur5e_gello/: .gitignore  LICENSE  README.md  pyproject.toml
openpi_ur5e/lerobot_ur5e_gello/lerobot_camera_kinect/: __init__.py  pyproject.toml
openpi_ur5e/lerobot_ur5e_gello/lerobot_camera_kinect/lerobot_camera_kinect/: __init__.py  config_kinect.py  kinect_camera.py
openpi_ur5e/lerobot_ur5e_gello/lerobot_camera_zmq/: README.md  __init__.py  pyproject.toml
openpi_ur5e/lerobot_ur5e_gello/lerobot_camera_zmq/lerobot_camera_zmq/: __init__.py  config_zmq_camera.py  zmq_camera.py
openpi_ur5e/lerobot_ur5e_gello/lerobot_robot_ur5e/: README.md  __init__.py  pyproject.toml
openpi_ur5e/lerobot_ur5e_gello/lerobot_robot_ur5e/lerobot_robot_ur5e/: __init__.py  config_ur5e copy.py  config_ur5e.py  robotiq_gripper.py  ur5e copy.py  ur5e.py
openpi_ur5e/lerobot_ur5e_gello/lerobot_teleoperator_gello/: README.md  __init__.py  pyproject.toml
openpi_ur5e/lerobot_ur5e_gello/lerobot_teleoperator_gello/lerobot_teleoperator_gello/: __init__.py  config_gello.py  gello.py
openpi_ur5e/lerobot_ur5e_gello/lerobot_teleoperator_keyboard_ur5e/: __init__.py  pyproject.toml
openpi_ur5e/lerobot_ur5e_gello/lerobot_teleoperator_keyboard_ur5e/lerobot_teleoperator_keyboard_ur5e/: __init__.py  config_keyboard_ur5e.py  keyboard_ur5e.py  ur5e_kin.py
openpi_ur5e/lerobot_ur5e_gello/openpi_client/: __init__.py  base_policy.py  msgpack_numpy.py  websocket_client_policy.py
openpi_ur5e/lerobot_ur5e_gello/pi_streamer/: README.md  config.example.json  config.json  pyproject.toml  streamer.py
openpi_ur5e/lerobot_ur5e_gello/scripts/: calibrate_gello_teleop.py  eval.py  kinect_zmq_server.py  record.py  record_wrapper.sh  remote_pi_inference.py  remote_pi_inference_dual_cam.py  remote_pi_inference_single_cam.py  teleoperate.py  unit_test_cameras.py
openpi_ur5e/openpi-ur5e/: .dockerignore  .gitignore  Dockerfile  LOCAL_TRAINING.md  README.md  docker-compose.yml  pyproject.toml  readn.md  results.md  setup_and_train.sh
openpi_ur5e/openpi-ur5e/docker/: start.sh
results/: benchmark_20260512_160525.csv  benchmark_20260512_160525.json
rlt/: pyproject.toml
rlt/agents/: rlt_buffer.py  sac_agent.py
rlt/data/: load_demos.py
rlt/docs/: HOW_RLT_WORKS.md  RLT_PAPER_REFERENCE.md
rlt/envs/: ur5e_rlt_env.py
rlt/examples/peg_insertion/: config.py  train_rlt.py
rlt/models/: pi05_hook.py  rl_token.py  vla_client.py
rlt/tests/: test_buffer.py  test_rl_token.py
rlt/training/: extract_embeddings.py  extract_embeddings_real.py  train_rl_token.py
rlt/utils/: ur5e_kinematics.py
scripts/: benchmark.py  collect_50_demos.sh  run_rlt_eval.sh  run_rlt_training.sh  run_vla_only.sh  start_vla_server.sh  test_classifier.py  train_hpc_pi0.sh  train_hpc_pi05.sh
ur5e_hil_serl/: .gitignore  QUICKSTART.md  README.md  README_2.md  pyproject.toml  requirements-lock.txt
ur5e_hil_serl/docs/: 01_environment_setup.md  02_uv_environment_setup.md  03_demo_data_collection.md  04_reward_classifier.md  05_actor_setup.md  06_training_pipeline.md  07_evaluation.md  08_ur_controller.md  09_ur5e_environment.md  10_examples_reference.md  README.md
ur5e_hil_serl/examples/: record_demos.py  record_success_fail.py  run_training.sh  train_rlpd.py
ur5e_hil_serl/examples/experiments/: config.py  mappings.py
ur5e_hil_serl/examples/experiments/bin_relocation/: config.py  run_actor.sh  run_learner.sh  wrapper.py
ur5e_hil_serl/examples/experiments/cable_routing/: config.py  run_actor.sh  run_learner.sh  wrapper.py
ur5e_hil_serl/examples/experiments/pcb_insertion/: config.py  run_actor.sh  run_learner.sh  wrapper.py
ur5e_hil_serl/examples/experiments/peg_insertion/: config.py  run_actor.sh  run_learner.sh  wrapper.py
ur5e_hil_serl/serl_launcher/serl_launcher/common/: typing.py
ur5e_hil_serl/serl_robot_infra/: setup.py
ur5e_hil_serl/serl_robot_infra/robot_controllers/: ur5e_controller.py
ur5e_hil_serl/serl_robot_infra/ur_env/camera/: __init__.py  kinect_capture.py  rs_capture.py  video_capture.py
ur5e_hil_serl/serl_robot_infra/ur_env/envs/: __init__.py  relative_env.py  ur5e_env.py  wrappers.py
ur5e_hil_serl/serl_robot_infra/ur_env/spacemouse/: fake_spacemouse.py  keyboard_expert.py  spacemouse_expert.py
ur5e_hil_serl/serl_robot_infra/ur_env/utils/: hande_gripper.py  rotations.py
ur5e_hil_serl/tests/: test_configs.py  test_env.py  test_pipeline.py  test_rotations.py  test_sim.py
(+40 files in other folders)
