[project]
name = "lerobot-camera-kinect"
version = "0.1.0"
description = "Kinect v2 camera plugin for LeRobot"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pylibfreenect2>=0.1.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["lerobot_camera_kinect*"]
