[project]
name = "lerobot_teleoperator_gello"
version = "0.1.0"
description = "A lerobot plugin for the ur5 gello teleop device from Phillip Wu."
requires-python = ">=3.11"

dependencies = [
    "lerobot",
    "dynamixel-sdk>=3.8",
]

[tool.setuptools]
packages = ["lerobot_teleoperator_gello"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"